fable/test/valid/function_data_type_in_body.f
      function fun(num)
      integer fun
      fun = num + 3
      end

      program prog
      integer fun
      num = fun(4)
      write(6, *) num
      end
