fable/test/syntax_error/fun_star.f
      function fun(a,*)
      fun = 0
      end
